--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --deploy-url /mobile/ --base-url /mobile",
+    "watch": "ng build --deploy-url /mobile/ --base-url /mobile --watch",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
